# gpu-image-pipeline

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_all.cpp  generate_charts.py
docs/: ALGORITHMS.md  PERFORMANCE.md  README.md
include/: cuda_utils.h
include/kernels/: color_space_conversion.cuh  gaussian_blur.cuh  histogram_equalization.cuh  sobel_edge_detection.cuh  tone_mapping.cuh
include/utils/: cuda_utils.cuh  image_io.hpp  memory_manager.cuh  stb_image.h  stb_image_write.h  timer.hpp
scripts/: profile_hist_eq.sh
src/: main.cpp
src/kernels/: color_space_conversion.cu  gaussian_blur.cu  histogram_equalization.cu  sobel_edge_detection.cu  tone_mapping.cu
src/tools/: hist_eq_test.cu
src/utils/: cuda_utils.cu  image_io.cpp  memory_manager.cu  timer.cpp
tests/: CMakeLists.txt  test_gaussian.cpp  test_histogram.cpp  test_sobel.cpp
